--- a/public/index.html
+++ b/public/index.html
@@ -26,7 +26,7 @@
                         <button type="submit">Add item</button>
                     </form>
 
-                    <ul class="post-list blog-post-list">
+                    <ul class="post-list blog-post-landing">
                     </ul>
                 </section>
 
