added delete componet

--- a/public/index.html
+++ b/public/index.html
@@ -36,7 +36,7 @@
                         <button type="submit">Post It</button>
                     </form>
 
-                    <ul class="post-list blog-post-list">
+                    <ul class="post-list blog-post-landing">
                     </ul>
                 </section>
 
